updated styles span tag to fix export issue with text disappearing behind background colors

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ section {
 span {
     text-align: center;
     align-self: center;
+    width: 100%;
 }
 
 img {
@@ -77,16 +78,15 @@ h2 {
 .greetingCard {
     display: grid;
     grid-template-rows: 20% 40% 40%;
-    /* background-color: #809848; */
     border: 5px solid #442220;
-    height: 175px;
-    width: 250px;
+    height: 185px;
+    width: 265px;
 }
 
 .sectionOne {
     background-color: #809848;
-    width: 251px;
-    height: 37px;
+    width: 260px;
+    height: 35px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -112,6 +112,7 @@ h2 {
 .forest {
     background-color: #809848;
     font-family: 'Blaka', cursive;
+    font-size: .65rem;
 }
 
 .forestTwo {
@@ -121,6 +122,7 @@ h2 {
 .river {
     background-color: #39A2AE;
     font-family: 'Indie Flower', cursive;
+    font-size: 1rem;
 }
 
 .riverTwo {
@@ -131,6 +133,7 @@ h2 {
     background-color: #928C6F;
     border: 5px double #EDEBA0;
     font-family: 'Staatliches', cursive;
+    font-size: 1rem;
 }
 
 .mountainTwo {
@@ -153,5 +156,5 @@ h2 {
 }
 
 .absolutePosition {
-    position: absolute;
+    position: relative;
 }
